improve backtesting trades pagination
